Added html and css for background and social media card

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="content-area" style="background: url('https://wallpaperaccess.com/full/636909.jpg'); background-size: cover; background-positiion: center;">
+  <div class="content-area" style="background: url('https://wallpaperaccess.com/full/636909.jpg'); background-size: cover; background-position: center;">
     <section class="card">
       <div class="card__wrapper">
-        
+        <img src="https://images.unsplash.com/photo-1511485977113-f34c92461ad9?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&fit=crop&h=200&w=200&ixid=eyJhcHBfaWQiOjE3Nzg0fQ" alt="" class="card__user-img">
+        <div class="card__info">
+          <span class="card__name">Jane Doe</span>
+          <span class="card__title">UI/UX Designer</span>
+        </div>
       </div>
     </section>
   </div>
