--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700&display=swap">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
 </head>
 <body>
@@ -18,6 +19,26 @@
         <div class="card__info">
           <span class="card__name">Jane Doe</span>
           <span class="card__title">UI/UX Designer</span>
+        </div>
+        <div class="card__socials">
+          <div class="card__icon card__icon--fb">
+            <span class="card__icon-box">
+              <i class="fab fa-facebook-f"></i>
+            </span>
+            <span class="card__icon-title">Facebook</span>
+          </div>
+          <div class="card__icon card__icon--ig">
+            <span class="card__icon-box">
+              <i class="fab fa-instagram"></i>
+            </span>
+            <span class="card__icon-title">Instagram</span>
+          </div>
+          <div class="card__icon card__icon--db">
+            <span class="card__icon-box">
+              <i class="fab fa-dribbble"></i>
+            </span>
+            <span class="card__icon-title">Dribbble</span>
+          </div>
         </div>
       </div>
     </section>
