--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="root"></div>
   <div class="content-area" style="background: url('https://wallpaperaccess.com/full/636909.jpg'); background-size: cover; background-position: center;">
     <section class="card">
       <div class="card__wrapper">
@@ -43,5 +44,6 @@
       </div>
     </section>
   </div>
+  <script src="./js/app.js"></script>
 </body>
 </html>
