--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="root"></div>
+  <!-- <div class="root"></div>
   <div class="content-area" style="background: url('https://wallpaperaccess.com/full/636909.jpg'); background-size: cover; background-position: center;">
     <section class="card">
       <div class="card__wrapper">
@@ -43,7 +43,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </div> -->
   <script src="./js/app.js"></script>
 </body>
 </html>
